--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="assets/fonts/Material-Icons/stylesheet.css" rel="stylesheet">
-	<link href="assets" rel="stylesheet">
-	<script src="assets/js" defer></script>
-	<script src="assets/js/plugins/kodik" defer></script>
-	<script src="assets/js/plugins/shikimori" defer></script>
-	<script src="assets/js/plugins/vanilla-lazyload" defer></script>
-	<script src="assets/js/plugins/core" defer></script>
+	<link href="assets/index.css" rel="stylesheet">
+	<script src="assets/js/index.js" defer></script>
+	<script src="assets/js/plugins/kodik/index.js" defer></script>
+	<script src="assets/js/plugins/shikimori/index.js" defer></script>
+	<script src="assets/js/plugins/vanilla-lazyload/index.js" defer></script>
+	<script src="assets/js/plugins/core/index.js" defer></script>
 	<title>KDK Anime | Главная</title>
 </head>
 <body>
