--- a/src/assets/js/plugins/core/pages/general/index.html
+++ b/src/assets/js/plugins/core/pages/general/index.html
@@ -4,6 +4,7 @@
 <div class="backplate"></div>
 <h1>Главная</h1>
 <div class="general-container"></div>
+<div class="poster--plate"></div>
 <div class="loading-box">
 	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; display: block;" width="100px" height="100px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
 		<circle cx="50" cy="50" r="0" fill="none" stroke="#000" stroke-width="2">
