--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="assets/fonts/Material-Icons/stylesheet.css" rel="stylesheet">
+	<link rel="manifest" href="manifest.json">
 	<link href="assets/index.css" rel="stylesheet">
 	<script defer>
 		const jsPath = 'assets/js/';
